Now in functions

--- a/en/Fundamentals.ipynb
+++ b/en/Fundamentals.ipynb
@@ -42,11 +42,11 @@
    "source": [
     "## Tools\n",
     "\n",
-    "All this series is written as [Jupyter notebooks](https://jupyter.org/). You can grab them at [this github repository](https://github.com/fcolavecchia/fp-course). Instructions on how to set up F\\# as a Notebook kernel can be found __[here]__. \n",
-    "\n",
-    "This series is about the fundamentals of F\\# programming, and none of the examples need even to install F\\#. You can simply code along in your web browser of your choice, heading to the [Fable REPL](https://fable.io/repl/). Just write your code in the left panel, click the usual play button (or Alt+Enter), and there you go, you are programming in F\\#!. \n",
+    "This series is about the fundamentals of F\\# programming, and none of the examples need even to install F\\#. You can simply code along in your web browser of your choice, heading to the [Fable REPL](https://fable.io/repl/). Just write your code in the left panel, click the usual play button (or Alt+Enter), and there you go, you are programming in F\\#!.\n",
     "\n",
     "You can also install the F\\# language and use your everyday editor, see instructions __[here]__. \n",
+    "\n",
+    "Besides, all this series is written as [Jupyter notebooks](https://jupyter.org/). You can grab them at [this github repository](https://github.com/fcolavecchia/fp-course). Instructions on how to set up F\\# as a Notebook kernel can be found __[here]__. \n",
     "\n",
     "Visual Studio Code has a wonderful extension called Ionide to work with F\\#. I personally use JetBrains Rider for my daily coding.\n",
     "\n",
@@ -71,7 +71,170 @@
     "\n",
     "Any code you write will do _something_ with that data. \n",
     "\n",
-    "So the first step in a new language is to learn how to define a way to hold your data, and how to transform it along the code. The former concept usually translates into _variables_ and while the latter one into _routines_, (or any other name, such as procedures, or functions, depending your programming scope). In this way, one uses routines to change the variables, or create other ones, from an order to buy something in a website, to the color of a pixel in your game of choice. \n",
+    "So the first step in a new language is to learn how to define a way to hold your data, and how to transform it along the code. The former concept usually translates into _variables_ and while the latter one into _routines_, (or any other name, such as procedures, or functions, depending your programming scope). In this way, one uses routines to change the variables, or create other ones, from an order to buy something in a website, to the color of a pixel in your game of preference. \n",
+    "\n",
+    "But let us go back and start with _expressions_. An expression is an ordered set of symbols that may represent different entities in the code. Pretty much like a sentence in a human language, an expression has to have a valid syntax (nobody will understand me if I use the. period wrong.) and also has to be meaningful (I a example for if me nobody of sentence sort the understand will words). The compiler, however, is much more strict with the rules and does not allow such poems. Why? Because the compiler needs to grab the expression, process it and return a _value_. So the value is the result of the evaluation of an expression. \n",
+    "\n",
+    "In F\\# everything is an expression.\n",
+    "\n",
+    "And since every expression results in a value, one needs to manage all these values that will be appearing as the code runs, identify and use them as one sees fit. To that end, F\\# uses several _keywords_, and one of them is the `let`. \n",
+    "\n",
+    "In F\\# one says that `let` _binds_ an expression to an identifier. For example\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "fsharp"
+    },
+    "vscode": {
+     "languageId": "dotnet-interactive.fsharp"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "// My first line in F# \n",
+    "let a = 1 "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "binds the literal expression `1` to the name `a`. On the right hand side of the `=` symbol (that acts here as a binding operator), one can have any valid expression:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "fsharp"
+    },
+    "vscode": {
+     "languageId": "dotnet-interactive.fsharp"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "let a = 1 + 3\n",
+    "let s = \"this is a string\" \n",
+    "let l = [1 ; 2 ; 3] // A list of integers "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "and so on. Of course one can associate a previous binding with a new one:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "fsharp"
+    },
+    "vscode": {
+     "languageId": "dotnet-interactive.fsharp"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8\n"
+     ]
+    }
+   ],
+   "source": [
+    "let b = a + 4 \n",
+    "printfn \"%A\" b"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Inmutability\n",
+    "\n",
+    "However, you cannot bind an expression to an identifier that has already been used:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "fsharp"
+    },
+    "vscode": {
+     "languageId": "dotnet-interactive.fsharp"
+    }
+   },
+   "outputs": [
+    {
+     "ename": "Error",
+     "evalue": "input.fsx (2,5)-(2,6) typecheck error Duplicate definition of value 'q'",
+     "output_type": "error",
+     "traceback": [
+      "input.fsx (2,5)-(2,6) typecheck error Duplicate definition of value 'q'"
+     ]
+    }
+   ],
+   "source": [
+    "let q = 3\n",
+    "let q = q + 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "which answers why one does not use _variables_ in F\\#: once the value of an expression is obtained, it cannot be changed. In other words, all the values are _immutable_: once there, they cannot be changed. There are no variables in the language, because there is nothing to _vary_. You can create as many values as you want, but you cannot change them: \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "fsharp"
+    },
+    "vscode": {
+     "languageId": "dotnet-interactive.fsharp"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "let q = 3\n",
+    "let qq = q + 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The implications of this are deep and it is very important to let the concept mature and sink in, because it percolates all the code in F\\# (and any other functional language). In some way, since everything is an expression, coding in F\\# is mananging the expressions that solve our problem. You name an expression (that is, you bind it to an identifier), use it in another expression, bind its value to a new identifier and so on an so on.\n",
+    "\n",
+    "The perspective of a code as a long list of `let` bindings is kind of daunting. That is where functions come in."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Resources\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "\n",
     "\n",
     "\n",
@@ -84,8 +247,67 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 33,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "fsharp"
+    },
+    "vscode": {
+     "languageId": "dotnet-interactive.fsharp"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12345678910"
+     ]
+    }
+   ],
+   "source": [
+    "let x4 = for i in [1..10]\n",
+    "          do printf \"%i\" i"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "fsharp"
+    },
+    "vscode": {
+     "languageId": "dotnet-interactive.fsharp"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "I a example for if me nobody of sentence sort the understand will words"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "let c = \"nobody will understand me I a example for if of sentence sort the words\"\n",
+    "let q = c.Split(' ')\n",
+    "Array.sort q \n",
+    "|> String.concat \" \""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
    "metadata": {
     "dotnet_interactive": {
      "language": "fsharp"
@@ -95,7 +317,58 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "let p = 5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "fsharp"
+    },
+    "vscode": {
+     "languageId": "dotnet-interactive.fsharp"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "printfn \"%A\" p "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "fsharp"
+    },
+    "vscode": {
+     "languageId": "dotnet-interactive.fsharp"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "let p = 6\n",
+    "printfn \"%A\" p "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -196,6 +469,23 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "fsharp"
+    },
+    "vscode": {
+     "languageId": "dotnet-interactive.fsharp"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "let next x = \n",
+    "    x + 1 "
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "dotnet_interactive": {
@@ -255,6 +545,11 @@
     "\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
