Writing the function part

--- a/en/ScratchPad.ipynb
+++ b/en/ScratchPad.ipynb
@@ -505,6 +505,78 @@
     "indexOfAny2 \"zzabyycdxx\" ['b';'y'] |> printfn \"%A\"\n",
     "indexOfAny2 \"aba\" ['z'] |> printfn \"%A\"      \n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "fsharp"
+    },
+    "vscode": {
+     "languageId": "dotnet-interactive.fsharp"
+    }
+   },
+   "outputs": [
+    {
+     "ename": "Error",
+     "evalue": "input.fsx (4,15)-(4,21) typecheck error The generic function 'typeof' must be given explicit type argument(s)\ninput.fsx (4,15)-(4,21) typecheck error This value is not a function and cannot be applied.",
+     "output_type": "error",
+     "traceback": [
+      "input.fsx (4,15)-(4,21) typecheck error The generic function 'typeof' must be given explicit type argument(s)\n",
+      "input.fsx (4,15)-(4,21) typecheck error This value is not a function and cannot be applied."
+     ]
+    }
+   ],
+   "source": [
+    "let q =\n",
+    "    3 \n",
+    "\n",
+    "let q () =\n",
+    "    3     \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "fsharp"
+    },
+    "vscode": {
+     "languageId": "dotnet-interactive.fsharp"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "let q = 4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "fsharp"
+    },
+    "vscode": {
+     "languageId": "dotnet-interactive.fsharp"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table><thead><tr><th>Variable</th><th>Type</th><th>Value</th></tr></thead><tbody><tr><td>q</td><td><span><a href=\"https://docs.microsoft.com/dotnet/api/system.int32?view=net-5.0\">System.Int32</a></span></td><td><div class=\"dni-plaintext\">3</div></td></tr></tbody></table>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "#!whos"
+   ]
   }
  ],
  "metadata": {
