--- a/en/Fundamentals.ipynb
+++ b/en/Fundamentals.ipynb
@@ -29,7 +29,8 @@
     "\n",
     "F\\# is one of the languages provided by the .NET framework (together with C# and Visual Basic). As such, F\\# is tighly integrated with all the tools and libraries that .NET provides. In this sense, and __only for pedagogical purposes__, I will view .NET as the set of libraries that one can use to enhance your code. In other words, I will stay away from using them, and focusing in the core features of F\\# as a functional language. From Web programming to Machine Learning, from databases to windows, .NET has everything you need to make your programming a better experience, once you know the core features F\\# provides. \n",
     "\n",
-    "> If you are a C# programmer, you will probably get a better mileage going into some of the excellent resources of F\\# for C# coders, such as [Get programming with F\\#](https://www.manning.com/books/get-programming-with-f-sharp#:~:text=about%20the%20book-,Get%20Programming%20with%20F%23%3A%20A%20guide%20for%20.,of%20functional%20programming%20in%20F%23.) \n"
+    "> If you are a C# programmer, you will probably get a better mileage going into some of the excellent resources of F\\# for C# coders, such as [Get programming with F\\#](https://www.manning.com/books/get-programming-with-f-sharp#:~:text=about%20the%20book-,Get%20Programming%20with%20F%23%3A%20A%20guide%20for%20.,of%20functional%20programming%20in%20F%23.) \n",
+    "See the Resources section for more information.\n"
    ]
   },
   {
@@ -48,9 +49,11 @@
     "\n",
     "Besides, all this series is written as [Jupyter notebooks](https://jupyter.org/). You can grab them at [this github repository](https://github.com/fcolavecchia/fp-course). Instructions on how to set up F\\# as a Notebook kernel can be found __[here]__. \n",
     "\n",
-    "Visual Studio Code has a wonderful extension called Ionide to work with F\\#. I personally use JetBrains Rider for my daily coding.\n",
+    "[Visual Studio Code](https://code.visualstudio.com/) has a wonderful extension called [Ionide](https://ionide.io/Editors/Code/overview.html) to work with F\\#. I personally use JetBrains Rider for my daily coding.\n",
     "\n",
-    "> You can also install Visual Studio for Windows or MacOS, if you are familiar with that tool. "
+    "You can also use F\\# with Visual Studio for Windows or MacOS, if you are familiar with that tool. \n",
+    "\n",
+    "Moreover, if you want to code F\\# with `vim`, [Ionide gets you covered](https://ionide.io/Editors/Vim/overview.html)."
    ]
   },
   {
@@ -71,11 +74,9 @@
     "\n",
     "Any code you write will do _something_ with that data. \n",
     "\n",
-    "So the first step in a new language is to learn how to define a way to hold your data, and how to transform it along the code. The former concept usually translates into _variables_ and while the latter one into _routines_, (or any other name, such as procedures, or functions, depending your programming scope). In this way, one uses routines to change the variables, or create other ones, from an order to buy something in a website, to the color of a pixel in your game of preference. \n",
+    "So the first step in a new language is to learn how to define a way to hold your data, and how to transform it along the prgram. The former concept usually translates into _variables_ and while the latter one into _routines_, (or any other name, such as procedures, or functions, depending your programming scope). In this way, one uses routines to change the variables, or create other ones, from an order to buy something in a website, to the color of a pixel in your game of preference. \n",
     "\n",
-    "But let us go back and start with _expressions_. An expression is an ordered set of symbols that may represent different entities in the code. Pretty much like a sentence in a human language, an expression has to have a valid syntax (nobody will understand me if I use the. period wrong.) and also has to be meaningful (I a example for if me nobody of sentence sort the understand will words). The compiler, however, is much more strict with the rules and does not allow such poems. Why? Because the compiler needs to grab the expression, process it and return a _value_. So the value is the result of the evaluation of an expression. \n",
-    "\n",
-    "In F\\# everything is an expression.\n",
+    "But let us go back and start with _expressions_. An expression is an ordered set of symbols that may represent different entities in the code. Pretty much like a sentence in a human language, an expression has to have a valid syntax (nobody will understand me if I use the. period wrong.) and also has to be meaningful (I a example for if me nobody of sentence sort the understand will words). The compiler, however, is much more strict with the rules and does not allow such poems. Why? Because the compiler needs to grab the expression, process it and obtain a _value_. So the value is the result of the evaluation of an expression. \n",
     "\n",
     "And since every expression results in a value, one needs to manage all these values that will be appearing as the code runs, identify and use them as one sees fit. To that end, F\\# uses several _keywords_, and one of them is the `let`. \n",
     "\n",
@@ -90,7 +91,7 @@
      "language": "fsharp"
     },
     "vscode": {
-     "languageId": "dotnet-interactive.fsharp"
+     "languageId": "fsharp"
     }
    },
    "outputs": [],
@@ -114,7 +115,7 @@
      "language": "fsharp"
     },
     "vscode": {
-     "languageId": "dotnet-interactive.fsharp"
+     "languageId": "fsharp"
     }
    },
    "outputs": [],
@@ -128,7 +129,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "and so on. Of course one can associate a previous binding with a new one:"
+    "and so on. Of course one can associate a previous binding with a new one through an expression:"
    ]
   },
   {
@@ -139,7 +140,7 @@
      "language": "fsharp"
     },
     "vscode": {
-     "languageId": "dotnet-interactive.fsharp"
+     "languageId": "fsharp"
     }
    },
    "outputs": [
@@ -160,6 +161,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "In the line above, we add four to `a` and bind the result of this expression to the `b` identifier. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Inmutability\n",
     "\n",
     "However, you cannot bind an expression to an identifier that has already been used:"
@@ -167,13 +175,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {
     "dotnet_interactive": {
      "language": "fsharp"
     },
     "vscode": {
-     "languageId": "dotnet-interactive.fsharp"
+     "languageId": "fsharp"
     }
    },
    "outputs": [
@@ -206,13 +214,20 @@
      "language": "fsharp"
     },
     "vscode": {
-     "languageId": "dotnet-interactive.fsharp"
+     "languageId": "fsharp"
     }
    },
    "outputs": [],
    "source": [
     "let q = 3\n",
     "let qq = q + 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> ❗️ There are some cases where one can use the same identifier, see this "
    ]
   },
   {
@@ -247,6 +262,53 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "vscode": {
+     "languageId": "fsharp"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "let demo () = \n",
+    "    let x = 7  \n",
+    "    let x = x + 3\n",
+    "    printfn \"The x is %d\" x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "vscode": {
+     "languageId": "fsharp"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The x is 10\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<null>"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "demo()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": []
@@ -259,7 +321,7 @@
      "language": "fsharp"
     },
     "vscode": {
-     "languageId": "dotnet-interactive.fsharp"
+     "languageId": "fsharp"
     }
    },
    "outputs": [
@@ -284,7 +346,7 @@
      "language": "fsharp"
     },
     "vscode": {
-     "languageId": "dotnet-interactive.fsharp"
+     "languageId": "fsharp"
     }
    },
    "outputs": [
@@ -313,7 +375,7 @@
      "language": "fsharp"
     },
     "vscode": {
-     "languageId": "dotnet-interactive.fsharp"
+     "languageId": "fsharp"
     }
    },
    "outputs": [],
@@ -329,7 +391,7 @@
      "language": "fsharp"
     },
     "vscode": {
-     "languageId": "dotnet-interactive.fsharp"
+     "languageId": "fsharp"
     }
    },
    "outputs": [
@@ -353,7 +415,7 @@
      "language": "fsharp"
     },
     "vscode": {
-     "languageId": "dotnet-interactive.fsharp"
+     "languageId": "fsharp"
     }
    },
    "outputs": [
@@ -392,7 +454,7 @@
      "language": "fsharp"
     },
     "vscode": {
-     "languageId": "dotnet-interactive.fsharp"
+     "languageId": "fsharp"
     }
    },
    "outputs": [],
@@ -410,7 +472,7 @@
      "language": "fsharp"
     },
     "vscode": {
-     "languageId": "dotnet-interactive.fsharp"
+     "languageId": "fsharp"
     }
    },
    "outputs": [
@@ -443,7 +505,7 @@
      "language": "fsharp"
     },
     "vscode": {
-     "languageId": "dotnet-interactive.fsharp"
+     "languageId": "fsharp"
     }
    },
    "outputs": [],
@@ -460,7 +522,7 @@
      "language": "fsharp"
     },
     "vscode": {
-     "languageId": "dotnet-interactive.fsharp"
+     "languageId": "fsharp"
     }
    },
    "outputs": [],
@@ -476,7 +538,7 @@
      "language": "fsharp"
     },
     "vscode": {
-     "languageId": "dotnet-interactive.fsharp"
+     "languageId": "fsharp"
     }
    },
    "outputs": [],
@@ -522,7 +584,7 @@
      "language": "fsharp"
     },
     "vscode": {
-     "languageId": "dotnet-interactive.fsharp"
+     "languageId": "fsharp"
     }
    },
    "outputs": [],
@@ -559,7 +621,7 @@
      "language": "fsharp"
     },
     "vscode": {
-     "languageId": "dotnet-interactive.fsharp"
+     "languageId": "fsharp"
     }
    },
    "outputs": [],
@@ -577,7 +639,7 @@
      "language": "fsharp"
     },
     "vscode": {
-     "languageId": "dotnet-interactive.fsharp"
+     "languageId": "fsharp"
     }
    },
    "outputs": [],
@@ -607,7 +669,7 @@
      "language": "fsharp"
     },
     "vscode": {
-     "languageId": "dotnet-interactive.fsharp"
+     "languageId": "fsharp"
     }
    },
    "outputs": [],
@@ -623,7 +685,7 @@
      "language": "fsharp"
     },
     "vscode": {
-     "languageId": "dotnet-interactive.fsharp"
+     "languageId": "fsharp"
     }
    },
    "outputs": [
@@ -651,7 +713,7 @@
      "language": "javascript"
     },
     "vscode": {
-     "languageId": "dotnet-interactive.javascript"
+     "languageId": "fsharp"
     }
    },
    "outputs": [
@@ -762,7 +824,7 @@
      "language": "fsharp"
     },
     "vscode": {
-     "languageId": "dotnet-interactive.fsharp"
+     "languageId": "fsharp"
     }
    },
    "outputs": [
@@ -790,11 +852,11 @@
    "name": ".net-fsharp"
   },
   "language_info": {
-   "file_extension": ".cs",
-   "mimetype": "text/x-csharp",
-   "name": "F#",
-   "pygments_lexer": "csharp",
-   "version": "9.0"
+   "file_extension": ".fs",
+   "mimetype": "text/x-fsharp",
+   "name": "C#",
+   "pygments_lexer": "fsharp",
+   "version": "4.5"
   },
   "orig_nbformat": 4
  },
