--- a/en/Fundamentals.ipynb
+++ b/en/Fundamentals.ipynb
@@ -65,6 +65,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## So what is a function anyway?\n",
+    "\n",
+    "Since we are about to learn functional programming, we need to agree in what a _function_ is in this context. Let us start with a set of entities, for example, the cars parked in a given block of a street. One can identify each car by its license plate, and then build a table with two columns: the first one with the license plate, and the secon one with the corresponding the color of each car. That's a function that we can call `carColor`, that associates each car of the block with its color. The table is a representation of that function. A function from a set of entities A to a set of entities B is then a relation that associates elements between to sets A and B, with the property that each element of A has a one and only one corresponding element of B. \n",
+    "There are two things to note. First, a function is defined _from_ a set _to_ a set. \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n",
     "\n",
     "\n",
@@ -153,8 +163,7 @@
     }
    ],
    "source": [
-    "let b = a + 4 \n",
-    "printfn \"%A\" b"
+    "let b = a + 4 "
    ]
   },
   {
