--- a/en/Fundamentals.ipynb
+++ b/en/Fundamentals.ipynb
@@ -62,13 +62,66 @@
    "source": []
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## So what is a function anyway?\n",
     "\n",
-    "Since we are about to learn functional programming, we need to agree in what a _function_ is in this context. Let us start with a set of entities, for example, the cars parked in a given block of a street. One can identify each car by its license plate, and then build a table with two columns: the first one with the license plate, and the secon one with the corresponding the color of each car. That's a function that we can call `carColor`, that associates each car of the block with its color. The table is a representation of that function. A function from a set of entities A to a set of entities B is then a relation that associates elements between to sets A and B, with the property that each element of A has a one and only one corresponding element of B. \n",
-    "There are two things to note. First, a function is defined _from_ a set _to_ a set. \n"
+    "Since we are about to learn functional programming, we need to agree in what a _function_ is in this context. Let us start with a set of entities, for example, the cars parked in a given block of a street. One can identify each car by its license plate, and then build a table with two columns: the first one with the license plate, and the second one with the corresponding the color of each car:\n",
+    "\n",
+    "| Lic. Plate | Color         | \n",
+    "| :----------: |:-------------:|\n",
+    "| ABC 124 | black |\n",
+    "| DEF 350 | red   |\n",
+    "| QRZ 441 | black |\n",
+    "| JPG 255 | white | \n",
+    "\n",
+    "That's a function that we can call `carColor`, that associates each car of the block with its color. The table is a representation of that function. A function from a set of entities A to a set of entities B is then a relation that associates elements between the sets A and B, with the property that each and every element of A has a one and only one corresponding element of B. \n",
+    "\n",
+    "There are two things to note. First, a function is defined _from_ one set _to_ another set, in our example, from the set of license plates to the set of colors. To get the color of a particular car, you go to the table representation of the function, look up the plate in the column of license plates, and get the color from the second column. With this in mind, one can identify the _from_ set as the _input_ of the function, while the _to_ set is the _output_. \n",
+    "\n",
+    "Second, all elements of the input must relate to some element in the output set. In our example, every car in the block has a color assigned in the table. This means that there cannot be empty cells in the second column of our table. \n",
+    "\n",
+    "> ❓ Can you come up with more examples of functions in the real world? \n",
+    "\n",
+    "In math, functions are ubiquitous. Let us assume that $x$ is an integer, and define the function \n",
+    "$$\n",
+    "f(x) = x + 1 , \n",
+    "$$\n",
+    "that is, the function that returns the value $x$ plus one. The input set (which is called the _domain_ of the function in math) is the set of all integer values, $\\mathbb{Z}$, while the output set (the _codomain_ in math) is also $\\mathbb{Z}$. Using the _arrow_ notation, the complete definition of the function would be\n",
+    "$$\n",
+    "f: \\mathbb{Z} \\rightarrow \\mathbb{N} \\cup \\{0\\} / x \\mapsto x + 1 \n",
+    "$$\n",
+    "Or in english, $f$ is a function from $\\mathbb{Z}$ to $\\mathbb{Z}$ such that $f$ of $x$ is $x + 1$.\n",
+    "\n",
+    "> 🔔 A slight detour around the codomain. The codomain is the set of entities where the function can possibly map input values. For example, in the case of the color of the cars, the codomain is simply all the possible colors. In many cases that information is too general, and it is convenient to define the _range_ of the function, which is the set of actual values of outputs the function maps inputs into. The _range_ in the cars example is the set {black, red, white}.\n",
+    "\n",
+    "### Multiple inputs and outputs\n",
+    "\n",
+    "Let us take the example of a vending machine. In a vending machine, products are arranged in shelves, where each shelf is named by a letter. In each shelf, the products are aligned and identified by a number. Then, in A1 you have a bag of chips, in A2 a chocolate, in B1 a soda, and so on. The machine also has a keyboard with letters and numbers for you to choose the product. To buy something, you need to give the machine some money (coins, bills, credit card, etc), select the product by clicking the letter and the number on the keyboard. The machine returns the product and some cashback, if any. \n",
+    "The inputs of our `vendingMachine` function are the money, the letter and the number you selected, and the outputs are the product and \n",
+    "the cashback (if any). \n",
+    "\n",
+    "An example from math could be a translation function, where given a point with coordinates $x$ and $y$ in the plane, it returns a point with coordinates $x+1$ and $y+1$.  \n",
+    "\n",
+    "> \n",
+    "\n",
+    "### Composition \n",
+    " \n",
+    "\n",
+    "\n",
+    "The example of the friends, names, and initials.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Binding functions\n",
+    "\n",
+    "Functions with many arguments\n"
    ]
   },
   {
@@ -564,7 +617,12 @@
     }
    },
    "source": [
-    "### Discriminated unions "
+    "### Types\n",
+    "\n",
+    "#### Product type: Records\n",
+    "\n",
+    "#### Sum type: Discriminated unions\n",
+    "\n"
    ]
   },
   {
@@ -863,7 +921,7 @@
   "language_info": {
    "file_extension": ".fs",
    "mimetype": "text/x-fsharp",
-   "name": "C#",
+   "name": "F#",
    "pygments_lexer": "fsharp",
    "version": "4.5"
   },
