--- a/en/Fundamentals.ipynb
+++ b/en/Fundamentals.ipynb
@@ -85,15 +85,15 @@
     "\n",
     "> ❓ Can you come up with more examples of functions in the real world? \n",
     "\n",
-    "In math, functions are ubiquitous. Let us assume that $x$ is an integer, and define the function \n",
+    "In math, functions are ubiquitous. Let us assume that $x$ is an real number, and define the function \n",
     "$$\n",
     "f(x) = x + 1 , \n",
     "$$\n",
-    "that is, the function that returns the value $x$ plus one. The input set (which is called the _domain_ of the function in math) is the set of all integer values, $\\mathbb{Z}$, while the output set (the _codomain_ in math) is also $\\mathbb{Z}$. Using the _arrow_ notation, the complete definition of the function would be\n",
+    "that is, the function that returns the value $x$ plus one. The input set (which is called the _domain_ of the function in math) is the set of all real values, $\\mathbb{R}$, while the output set (the _codomain_ in math) is also $\\mathbb{R}$. Using the _arrow_ notation, the complete definition of the function would be\n",
     "$$\n",
-    "f: \\mathbb{Z} \\rightarrow \\mathbb{N} \\cup \\{0\\} / x \\mapsto x + 1 \n",
+    "f: \\mathbb{R} \\rightarrow \\mathbb{R} \\; ; \\;  x \\mapsto x + 1 \n",
     "$$\n",
-    "Or in english, $f$ is a function from $\\mathbb{Z}$ to $\\mathbb{Z}$ such that $f$ of $x$ is $x + 1$.\n",
+    "Or in english, $f$ is a function from $\\mathbb{R}$ to $\\mathbb{R}$ such that $f$ of $x$ is $x + 1$.\n",
     "\n",
     "> 🔔 A slight detour around the codomain. The codomain is the set of entities where the function can possibly map input values. For example, in the case of the color of the cars, the codomain is simply all the possible colors. In many cases that information is too general, and it is convenient to define the _range_ of the function, which is the set of actual values of outputs the function maps inputs into. The _range_ in the cars example is the set {black, red, white}.\n",
     "\n",
@@ -103,15 +103,73 @@
     "The inputs of our `vendingMachine` function are the money, the letter and the number you selected, and the outputs are the product and \n",
     "the cashback (if any). \n",
     "\n",
-    "An example from math could be a translation function, where given a point with coordinates $x$ and $y$ in the plane, it returns a point with coordinates $x+1$ and $y+1$.  \n",
+    "An example from math could be a translation function, where given a point with coordinates $x$ and $y$ in the plane, it returns a point with coordinates $x+1$ and $y+1$:\n",
+    "$$\n",
+    "g: \\mathbb{R} \\times \\mathbb{R} \\rightarrow \\mathbb{R} \\times \\mathbb{R}  \\; ; \\;  (x,y) \\mapsto (x + 1, y+1)\n",
+    "$$\n",
+    "or more succintly\n",
+    "$$\n",
+    "g(x,y) = (x+1,y+1)\n",
+    "$$\n",
     "\n",
-    "> \n",
+    "### Partial application \n",
+    "When we feed a function of several input elements, we can obtain the proper output(s) items. But having many inputs opens a new possibility: what happens when one decides not to complete all the inputs? Let us find out. Let us assume that we entered a bill into the vending machine. It is clear that we will not get any product, because the machine still needs two more inputs: the letter of the shelf and the product number that we want. _After_ we complete these two inputs, we will get our treat (and cashback, if any). So, entering money only in the vending machine leads to a state where two inputs are needed and two outputs will be returned. But, this is _another function_!!!. Let us call it `vendingMachineAfterInsertBill` that receives the letter of the shelf and the product number that we want and returns the product (and cashback, if any). \n",
+    "Going back to the math example, let us feed the function with just the $x = 3$ value, \n",
+    "$$\n",
+    "g(3,y) = (4,y+1)\n",
+    "$$\n",
+    "Again, the result of feeding the function with one value is another function:\n",
+    "$$\n",
+    "h: \\mathbb{R} \\rightarrow \\mathbb{R} \\times \\mathbb{R}  \\; ; \\;  y \\mapsto (4, y+1)\n",
+    "$$\n",
+    "or \n",
+    "$$\n",
+    "h(y) = (4,y+1)\n",
+    "$$\n",
+    "This property of functions is called _partial application_. Whenever you do not complete all the inputs of a function, you get another function.\n",
     "\n",
     "### Composition \n",
     " \n",
+    "Finally, we look here how to work with several functions at once. Let us assume that we have a function `getFirstName` that given the full name of a person, it returns the first name (it does not matter at this point the specifics of the implementation, not even the language). For example, when applied to 'David Gilmour', it returns 'David', or when applied to 'Annie Lennox', it returns, of course 'Annie'.\n",
+    "We also have a function `getInitial` that for a given name, it returns the initial. In the previous cases, 'D' for 'David' and 'A' for 'Annie'. \n",
+    "\n",
+    "Now we want to build a function that gives us the initial of the first name, given the full name. For 'Paul McCartney'. We feed 'Paul McCartney' as input to the function `getFirstName`, which gives us the output 'Paul'. Now, 'Paul' is the input of the function `getInitial` and returns 'P' as the final output. \n",
+    "This plumbing where the output of one function is the input of another is called _composition_. Note that it is absolutely necessary that the output of the first called function (`getFirstName`) and the input of the second one (`getInitial`) are the same kind of entity, in our case, both are first names.\n",
+    "You can [see this pictures for a graphical explanation](https://mathinsight.org/function_machine_composition).\n",
+    "\n",
+    "Let us now look at a math example. We defined before the function $f(x)$ that adds one to $x$, for example \n",
+    "$$\n",
+    "f(0) = 0 + 1 = 1\n",
+    "$$\n",
+    "What if we apply the $f$ function again? It means to compute\n",
+    "$$\n",
+    "f(f(0)) = f(0) + 1 = 0 + 1 + 1 = 2 \n",
+    "$$\n",
+    "In general,\n",
+    "$$\n",
+    "f(f(x)) = f(x) + 1 = x + 1 + 1 = x + 2 \n",
+    "$$\n",
+    "\n",
+    "If we look carefully to the last expression, it looks like composing the function is like passing the function as the input itself ($f(f(x))$). This means that if we are going to have a programming language that implements function composition, in some way functions should be able to be passed as input to another functions. \n",
+    "\n",
+    "> ❗️ The fact that we use the same function to compose with itself is not relevant to this discussion, one can compose as many different functions as one wants, provided that inputs and outputs are compatible in each composition step.\n",
+    "\n",
+    "> 🔔 However, composing that particular function with itself is interesting. Imaging having only the zero and this function. You can create all the natural numbers {1, 2, ...} just by composing this function with itself again and again. For example, $4 = f(f(f(f(0))))$, and so on. Therefore, given the number 0, $f(x) = x + 1$ and function composition, one can get all the natural numbers. Looks like there is something going on here. More on this, hopefully, in some episode later...\n",
     "\n",
     "\n",
-    "The example of the friends, names, and initials.\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Functions in F\\# \n",
+    "\n",
+    "Functions in F\\# play a key role, of course, because it is mainly a functional programming language. \n",
     "\n"
    ]
   },
