--- a/en/Index.ipynb
+++ b/en/Index.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "dotnet_interactive": {
@@ -15,15 +16,16 @@
     "\n",
     "## Tools\n",
     "\n",
-    "\n",
-    "\n",
-    "\n",
     "### `let` the fun begin \n",
-    "\n",
     "\n",
     "\n",
     "### Inmutability\n",
     "\n",
+    "### So what is a function anyway?\n",
+    "\n",
+    "### Functions in F\\# \n",
+    "\n",
+    "### To be or not to be, that is the option \n",
     "\n",
     "### Resources\n",
     "\n",
