--- a/en/Fundamentals.ipynb
+++ b/en/Fundamentals.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "dotnet_interactive": {
@@ -28,6 +29,8 @@
     "Even though you do not finally adopt the functional paradigm, adding a new language style to your assets will give you the experience to revisit old programming habits with new eyes, giving a deeper understanding, and more fine tuning to your code. You will become a better programmer, definetly!\n",
     "\n",
     "F\\# is one of the languages provided by the .NET framework (together with C# and Visual Basic). As such, F\\# is tighly integrated with all the tools and libraries that .NET provides. In this sense, and __only for pedagogical purposes__, I will view .NET as the set of libraries that one can use to enhance your code. In other words, I will stay away from using them, and focusing in the core features of F\\# as a functional language. From Web programming to Machine Learning, from databases to windows, .NET has everything you need to make your programming a better experience, once you know the core features F\\# provides. \n",
+    "\n",
+    "Also, my aim is to keep it as simple as possible, because I would like the reader to have the fundamental set of tools from the language to play with. To that end, some concepts that can be considered very basic, are left aside on purpose, and will be revealed in the future. \n",
     "\n",
     "> If you are a C# programmer, you will probably get a better mileage going into some of the excellent resources of F\\# for C# coders, such as [Get programming with F\\#](https://www.manning.com/books/get-programming-with-f-sharp#:~:text=about%20the%20book-,Get%20Programming%20with%20F%23%3A%20A%20guide%20for%20.,of%20functional%20programming%20in%20F%23.) \n",
     "See the Resources section for more information.\n"
@@ -80,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {
     "dotnet_interactive": {
      "language": "fsharp"
@@ -104,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {
     "dotnet_interactive": {
      "language": "fsharp"
@@ -129,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {
     "dotnet_interactive": {
      "language": "fsharp"
@@ -161,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {
     "dotnet_interactive": {
      "language": "fsharp"
@@ -194,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {
     "dotnet_interactive": {
      "language": "fsharp"
@@ -326,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 40,
    "metadata": {
     "dotnet_interactive": {
      "language": "fsharp"
@@ -352,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 41,
    "metadata": {
     "dotnet_interactive": {
      "language": "fsharp"
@@ -391,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 42,
    "metadata": {
     "dotnet_interactive": {
      "language": "fsharp"
@@ -471,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 43,
    "metadata": {
     "dotnet_interactive": {
      "language": "fsharp"
@@ -505,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 44,
    "metadata": {
     "dotnet_interactive": {
      "language": "fsharp"
@@ -581,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 45,
    "metadata": {
     "dotnet_interactive": {
      "language": "fsharp"
@@ -618,7 +621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 46,
    "metadata": {
     "dotnet_interactive": {
      "language": "fsharp"
@@ -636,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 47,
    "metadata": {
     "dotnet_interactive": {
      "language": "fsharp"
@@ -666,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 48,
    "metadata": {
     "dotnet_interactive": {
      "language": "fsharp"
@@ -682,7 +685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 49,
    "metadata": {
     "dotnet_interactive": {
      "language": "fsharp"
@@ -710,7 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 50,
    "metadata": {
     "dotnet_interactive": {
      "language": "javascript"
@@ -785,7 +788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 51,
    "metadata": {
     "dotnet_interactive": {
      "language": "fsharp"
