A few more words for functions

--- a/en/Index.ipynb
+++ b/en/Index.ipynb
@@ -25,6 +25,12 @@
     "\n",
     "### Functions in F\\# \n",
     "\n",
+    "### Types \n",
+    "\n",
+    "#### Product type: Records\n",
+    "\n",
+    "#### Sum type: Discriminated unions\n",
+    "\n",
     "### To be or not to be, that is the option \n",
     "\n",
     "### Resources\n",
