--- a/en/Fundamentals.ipynb
+++ b/en/Fundamentals.ipynb
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 53,
    "metadata": {
     "dotnet_interactive": {
      "language": "fsharp"
@@ -94,8 +94,8 @@
    },
    "outputs": [],
    "source": [
-    "// My first line in F# \n",
-    "let a = 1 "
+    "// This is my first line in F#, which is a comment ¯\\_(シ)_/¯\n",
+    "let j = 1 // an integer "
    ]
   },
   {
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 54,
    "metadata": {
     "dotnet_interactive": {
      "language": "fsharp"
@@ -118,9 +118,11 @@
    },
    "outputs": [],
    "source": [
-    "let a = 1 + 3\n",
+    "let a = 1.0 + 3.0 // floats \n",
     "let s = \"this is a string\" \n",
-    "let l = [1 ; 2 ; 3] // A list of integers "
+    "let l = [1 ; 2 ; 3] // A list of integers \n",
+    "let m = (\"Messi\",10) // A tuple of a string and a number \n",
+    "let t = true // A bool "
    ]
   },
   {
@@ -132,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 55,
    "metadata": {
     "dotnet_interactive": {
      "language": "fsharp"
@@ -141,7 +143,17 @@
      "languageId": "dotnet-interactive.fsharp"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "Error",
+     "evalue": "input.fsx (1,13)-(1,14) typecheck error The type 'int' does not match the type 'float'\ninput.fsx (1,11)-(1,12) typecheck error The type 'int' does not match the type 'float'",
+     "output_type": "error",
+     "traceback": [
+      "input.fsx (1,13)-(1,14) typecheck error The type 'int' does not match the type 'float'\n",
+      "input.fsx (1,11)-(1,12) typecheck error The type 'int' does not match the type 'float'"
+     ]
+    }
+   ],
    "source": [
     "let b = a + 4 "
    ]
@@ -164,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 56,
    "metadata": {
     "dotnet_interactive": {
      "language": "fsharp"
@@ -197,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 57,
    "metadata": {
     "dotnet_interactive": {
      "language": "fsharp"
@@ -329,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 58,
    "metadata": {
     "dotnet_interactive": {
      "language": "fsharp"
@@ -355,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 59,
    "metadata": {
     "dotnet_interactive": {
      "language": "fsharp"
@@ -394,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 60,
    "metadata": {
     "dotnet_interactive": {
      "language": "fsharp"
@@ -474,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 61,
    "metadata": {
     "dotnet_interactive": {
      "language": "fsharp"
@@ -508,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 62,
    "metadata": {
     "dotnet_interactive": {
      "language": "fsharp"
@@ -565,14 +577,37 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "> ❓ Think about routines, procedures or functions that maybe you have written in your language of preference. Do they behave as F\\# functions? "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> 🏋🏽 We have a function `mult2` that given a number `x` doubles that number. Without coding, can you determine what the next composite functions return when applied to 3? :\n",
     "\n",
+    "```fsharp\n",
+    "let f = mult2 >> next \n",
+    "let g = next >> mult2 \n",
+    "```\n",
     "\n",
-    "\n",
-    "\n",
-    "> ❓ Think about routines, procedures or functions that maybe you have written in your language of preference. Do they behave as F\\# functions? \n"
+    "Code the function `mult2` and see the result by yourself."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- The use of the let to bind functions and values equally\n",
+    "- functions and values begin with lowercase\n",
+    "- functions and inmutability\n",
+    "- "
    ]
   },
   {
@@ -584,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 63,
    "metadata": {
     "dotnet_interactive": {
      "language": "fsharp"
@@ -621,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 64,
    "metadata": {
     "dotnet_interactive": {
      "language": "fsharp"
@@ -639,7 +674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 65,
    "metadata": {
     "dotnet_interactive": {
      "language": "fsharp"
@@ -669,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 66,
    "metadata": {
     "dotnet_interactive": {
      "language": "fsharp"
@@ -685,7 +720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 67,
    "metadata": {
     "dotnet_interactive": {
      "language": "fsharp"
@@ -713,7 +748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 68,
    "metadata": {
     "dotnet_interactive": {
      "language": "javascript"
@@ -788,7 +823,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 69,
    "metadata": {
     "dotnet_interactive": {
      "language": "fsharp"
