Testing behavior in page

--- a/en/Fundamentals.ipynb
+++ b/en/Fundamentals.ipynb
@@ -275,29 +275,38 @@
     "The inputs of our `vendingMachine` function are the money, the letter and the number you selected, and the outputs are the product and \n",
     "the cashback (if any). \n",
     "\n",
-    "An example from math could be a translation function, where given a point with coordinates $x$ and $y$ in the plane, it returns a point with coordinates $x+1$ and $y+1$:\n",
+    "An example from math could be a translation function, where given a point with coordinates $$x$$ and $$y$$ in the plane, it returns a point with coordinates $$x+1$$ and $$y+1$$:\n",
+    "\n",
     "$$\n",
     "g: \\mathbb{R} \\times \\mathbb{R} \\rightarrow \\mathbb{R} \\times \\mathbb{R}  \\; ; \\;  (x,y) \\mapsto (x + 1, y+1)\n",
     "$$\n",
+    "\n",
     "or more succintly\n",
+    "\n",
     "$$\n",
     "g(x,y) = (x+1,y+1)\n",
     "$$\n",
     "\n",
     "### Partial application \n",
     "When we feed a function of several input elements, we can obtain the proper output(s) items. But having many inputs opens a new possibility: what happens when one decides not to complete all the inputs? Let us find out. Let us assume that we entered a bill into the vending machine. It is clear that we will not get any product, because the machine still needs two more inputs: the letter of the shelf and the product number that we want. _After_ we complete these two inputs, we will get our treat (and cashback, if any). So, entering money only in the vending machine leads to a state where two inputs are needed and two outputs will be returned. But, this is _another function_!!!. Let us call it `vendingMachineAfterInsertBill` that receives the letter of the shelf and the product number that we want and returns the product (and cashback, if any). \n",
-    "Going back to the math example, let us feed the function with just the $x = 3$ value, \n",
+    "Going back to the math example, let us feed the function with just the $$x = 3$$ value, \n",
+    "\n",
     "$$\n",
     "g(3,y) = (4,y+1)\n",
     "$$\n",
+    "\n",
     "Again, the result of feeding the function with one value is another function:\n",
+    "\n",
     "$$\n",
     "h: \\mathbb{R} \\rightarrow \\mathbb{R} \\times \\mathbb{R}  \\; ; \\;  y \\mapsto (4, y+1)\n",
     "$$\n",
+    "\n",
     "or \n",
+    "\n",
     "$$\n",
     "h(y) = (4,y+1)\n",
     "$$\n",
+    "\n",
     "This property of functions is called _partial application_. Whenever you do not complete all the inputs of a function, you get another function.\n",
     "\n",
     "### Composition \n",
@@ -309,7 +318,7 @@
     "This plumbing where the output of one function is the input of another is called _composition_. Note that it is absolutely necessary that the output of the first called function (`getFirstName`) and the input of the second one (`getInitial`) are the same kind of entity, in our case, both are first names.\n",
     "You can [see this pictures for a graphical explanation](https://mathinsight.org/function_machine_composition).\n",
     "\n",
-    "Let us now look at a math example. We defined before the function $f(x)$ that adds one to $x$, for example \n",
+    "Let us now look at a math example. We defined before the function $$f(x)$$ that adds one to $$x$$, for example \n",
     "$$\n",
     "f(0) = 0 + 1 = 1\n",
     "$$\n",
@@ -353,7 +362,7 @@
    "outputs": [],
    "source": [
     "let next x =\n",
-    "    x + 1 \n"
+    "    x + 1 "
    ]
   },
   {
@@ -604,10 +613,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- The use of the let to bind functions and values equally\n",
-    "- functions and values begin with lowercase\n",
-    "- functions and inmutability\n",
-    "- "
+    "Some final remarks for now on functions. First, note that the language use the same keyword `let` to bind simple values and functions to a name or identifier. This emphasizes the fact that in F# functions are 'just' values, and can be treated in the same way as, say, a simpler binding of an expression to an identifier. \n",
+    "Second, the properties of functions that were discussed above match perfectly inmutability. In fact, functions receive inmutable inputs and return an inmutable value. "
    ]
   },
   {
