--- a/en/Resources.ipynb
+++ b/en/Resources.ipynb
@@ -1,12 +1,13 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### Resources\n",
     "\n",
-    "\n",
+    "[What I wish I knew when learning F#](https://danielbachler.de/2020/12/23/what-i-wish-i-knew-when-learning-fsharp.html), by Daniel Bachler. \n",
     "\n",
     "\n",
     "\n",
