Still some differences between md

--- a/en/Fundamentals.ipynb
+++ b/en/Fundamentals.ipynb
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 1,
    "metadata": {
     "dotnet_interactive": {
      "language": "fsharp"
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 2,
    "metadata": {
     "dotnet_interactive": {
      "language": "fsharp"
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 3,
    "metadata": {
     "dotnet_interactive": {
      "language": "fsharp"
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 4,
    "metadata": {
     "dotnet_interactive": {
      "language": "fsharp"
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 5,
    "metadata": {
     "dotnet_interactive": {
      "language": "fsharp"
@@ -257,14 +257,18 @@
     "\n",
     "> ❓ Can you come up with more examples of functions in the real world? \n",
     "\n",
-    "In math, functions are ubiquitous. Let us assume that $x$ is an real number, and define the function \n",
+    "In math, functions are ubiquitous. Let us assume that $x$ is a real number, and define the function\n",
+    "\n",
     "$$\n",
-    "f(x) = x + 1 , \n",
+    "f(x) = x + 1, \n",
     "$$\n",
+    "\n",
     "that is, the function that returns the value $x$ plus one. The input set (which is called the _domain_ of the function in math) is the set of all real values, $\\mathbb{R}$, while the output set (the _codomain_ in math) is also $\\mathbb{R}$. Using the _arrow_ notation, the complete definition of the function would be\n",
+    "\n",
     "$$\n",
     "f: \\mathbb{R} \\rightarrow \\mathbb{R} \\; ; \\;  x \\mapsto x + 1 \n",
     "$$\n",
+    "\n",
     "Or in english, $f$ is a function from $\\mathbb{R}$ to $\\mathbb{R}$ such that $f$ of $x$ is $x + 1$.\n",
     "\n",
     "> 🔔 A slight detour around the codomain. The codomain is the set of entities where the function can possibly map input values. For example, in the case of the color of the cars, the codomain is simply all the possible colors. In many cases that information is too general, and it is convenient to define the _range_ of the function, which is the set of actual values of outputs the function maps inputs into. The _range_ in the cars example is the set {black, red, white}.\n",
@@ -275,7 +279,7 @@
     "The inputs of our `vendingMachine` function are the money, the letter and the number you selected, and the outputs are the product and \n",
     "the cashback (if any). \n",
     "\n",
-    "An example from math could be a translation function, where given a point with coordinates $$x$$ and $$y$$ in the plane, it returns a point with coordinates $$x+1$$ and $$y+1$$:\n",
+    "An example from math could be a translation function, where given a point with coordinates \\(x\\) and $$y$$ in the plane, it returns a point with coordinates $$x+1$$ and $$y+1$$:\n",
     "\n",
     "$$\n",
     "g: \\mathbb{R} \\times \\mathbb{R} \\rightarrow \\mathbb{R} \\times \\mathbb{R}  \\; ; \\;  (x,y) \\mapsto (x + 1, y+1)\n",
@@ -289,7 +293,7 @@
     "\n",
     "### Partial application \n",
     "When we feed a function of several input elements, we can obtain the proper output(s) items. But having many inputs opens a new possibility: what happens when one decides not to complete all the inputs? Let us find out. Let us assume that we entered a bill into the vending machine. It is clear that we will not get any product, because the machine still needs two more inputs: the letter of the shelf and the product number that we want. _After_ we complete these two inputs, we will get our treat (and cashback, if any). So, entering money only in the vending machine leads to a state where two inputs are needed and two outputs will be returned. But, this is _another function_!!!. Let us call it `vendingMachineAfterInsertBill` that receives the letter of the shelf and the product number that we want and returns the product (and cashback, if any). \n",
-    "Going back to the math example, let us feed the function with just the $$x = 3$$ value, \n",
+    "Going back to the math example, let us feed the function with just the $x = 3$ value, \n",
     "\n",
     "$$\n",
     "g(3,y) = (4,y+1)\n",
@@ -319,14 +323,19 @@
     "You can [see this pictures for a graphical explanation](https://mathinsight.org/function_machine_composition).\n",
     "\n",
     "Let us now look at a math example. We defined before the function $$f(x)$$ that adds one to $$x$$, for example \n",
+    "\n",
     "$$\n",
     "f(0) = 0 + 1 = 1\n",
     "$$\n",
+    "\n",
     "What if we apply the $f$ function again? It means to compute\n",
+    "\n",
     "$$\n",
     "f(f(0)) = f(0) + 1 = 0 + 1 + 1 = 2 \n",
     "$$\n",
+    "\n",
     "In general,\n",
+    "\n",
     "$$\n",
     "f(f(x)) = f(x) + 1 = x + 1 + 1 = x + 2 \n",
     "$$\n",
@@ -350,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 6,
    "metadata": {
     "dotnet_interactive": {
      "language": "fsharp"
@@ -376,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 7,
    "metadata": {
     "dotnet_interactive": {
      "language": "fsharp"
@@ -415,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 8,
    "metadata": {
     "dotnet_interactive": {
      "language": "fsharp"
@@ -495,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 9,
    "metadata": {
     "dotnet_interactive": {
      "language": "fsharp"
@@ -529,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 10,
    "metadata": {
     "dotnet_interactive": {
      "language": "fsharp"
@@ -626,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 11,
    "metadata": {
     "dotnet_interactive": {
      "language": "fsharp"
@@ -663,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 12,
    "metadata": {
     "dotnet_interactive": {
      "language": "fsharp"
@@ -681,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 13,
    "metadata": {
     "dotnet_interactive": {
      "language": "fsharp"
@@ -711,7 +720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 14,
    "metadata": {
     "dotnet_interactive": {
      "language": "fsharp"
@@ -727,7 +736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 15,
    "metadata": {
     "dotnet_interactive": {
      "language": "fsharp"
@@ -755,7 +764,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 16,
    "metadata": {
     "dotnet_interactive": {
      "language": "javascript"
@@ -830,7 +839,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 17,
    "metadata": {
     "dotnet_interactive": {
      "language": "fsharp"
