--- a/en/PythonExamples.ipynb
+++ b/en/PythonExamples.ipynb
@@ -24,9 +24,6 @@
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
-    },
-    "vscode": {
-     "languageId": "dotnet-interactive.csharp"
     }
    },
    "outputs": [
@@ -68,69 +65,57 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In Python, the `bool` type is a . Then, since `True == 1` and `False == 0`, is perfectly valid to sum booleans, and moreover, sum a `bool` and an `int`."
+    "In Python, the `bool` type is a subclass of type `int` . Then, since `True == 1` and `False == 0`, is perfectly valid to sum booleans, and moreover, sum a `bool` and an `int`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
-    },
-    "vscode": {
-     "languageId": "dotnet-interactive.csharp"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'bool'>\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(type(True))\n",
+    "\n",
+    "a = True == 1\n",
+    "\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "bool"
+       "'bool(x) -> bool\\n\\nReturns True when the argument x is true, False otherwise.\\nThe builtins True and False are the only two instances of the class bool.\\nThe class bool is a subclass of the class int, and cannot be subclassed.'"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "type(True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "vscode": {
-     "languageId": "dotnet-interactive.csharp"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "mappingproxy({'__repr__': <slot wrapper '__repr__' of 'bool' objects>,\n",
-       "              '__and__': <slot wrapper '__and__' of 'bool' objects>,\n",
-       "              '__rand__': <slot wrapper '__rand__' of 'bool' objects>,\n",
-       "              '__xor__': <slot wrapper '__xor__' of 'bool' objects>,\n",
-       "              '__rxor__': <slot wrapper '__rxor__' of 'bool' objects>,\n",
-       "              '__or__': <slot wrapper '__or__' of 'bool' objects>,\n",
-       "              '__ror__': <slot wrapper '__ror__' of 'bool' objects>,\n",
-       "              '__new__': <function bool.__new__(*args, **kwargs)>,\n",
-       "              '__doc__': 'bool(x) -> bool\\n\\nReturns True when the argument x is true, False otherwise.\\nThe builtins True and False are the only two instances of the class bool.\\nThe class bool is a subclass of the class int, and cannot be subclassed.'})"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "bool.__dict__\n",
+    "bool.__doc__\n",
     "# dir(bool)"
    ]
   },
@@ -150,9 +135,6 @@
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
-    },
-    "vscode": {
-     "languageId": "dotnet-interactive.csharp"
     }
    },
    "outputs": [
@@ -188,9 +170,6 @@
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
-    },
-    "vscode": {
-     "languageId": "dotnet-interactive.csharp"
     }
    },
    "outputs": [
@@ -224,21 +203,26 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".NET (C#)",
-   "language": "C#",
-   "name": ".net-csharp"
+   "display_name": "Python 3.9.7 ('base')",
+   "language": "python",
+   "name": "python3"
   },
   "language_info": {
-   "file_extension": ".cs",
-   "mimetype": "text/x-csharp",
-   "name": "C#",
-   "pygments_lexer": "csharp",
-   "version": "9.0"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.7"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "3d597f4c481aa0f25dceb95d2a0067e73c0966dcbd003d741d821a7208527ecf"
+    "hash": "1038e93ba1418ab4ede8bfa57363dc20f3ceb27f74719d4c3c57fe52e4b9de41"
    }
   }
  },
