--- a/en/Resources.ipynb
+++ b/en/Resources.ipynb
@@ -27,6 +27,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Web Development resources\n",
+    "\n",
+    "\n",
+    "- [Fable](https://fable.io/), the amazing transpiler from F# to JavaScript (and lately, [other languages](https://fable.io/blog/2022/2022-06-06-Snake_Island_alpha.html). Is not just a compiler, but a way to use these languages together. Depending on the recipe you would like to prepare, add the ingredients at your own pleasure. Also, check [Fable REPL](https://fable.io/repl/), where you can sketch with F#, no installation of anything needed.\n",
+    "-  [Feliz](https://zaid-ajaj.github.io/Feliz/)  is kind of hard to define, but basically it enables you to build and/or interact with React components directly in F#. \n",
+    "- [Feliz.Bulma](https://dzoukr.github.io/Feliz.Bulma) is a wrapper around the well-known [Bulma](https://bulma.io/) CSS framework, tailored to the [Feliz](https://zaid-ajaj.github.io/Feliz/) DSL.  \n",
+    "- [Html2Feliz](https://thisfunctionaltom.github.io/Html2Feliz/) enables you to translate plain HTML into Feliz. \n",
+    "- "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Functions everywhere"
    ]
   },
@@ -35,274 +49,6 @@
    "metadata": {},
    "source": [
     "Looks like one can reuse the binding name in different cells, provided one runs in the current order. Same value on one cell are not allowed, though."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "fsharp"
-    },
-    "vscode": {
-     "languageId": "dotnet-interactive.fsharp"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "let foo (a:string) b =\n",
-    "    a + b\n",
-    "   "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "fsharp"
-    },
-    "vscode": {
-     "languageId": "dotnet-interactive.fsharp"
-    }
-   },
-   "outputs": [
-    {
-     "ename": "Error",
-     "evalue": "input.fsx (2,13)-(2,14) typecheck error This expression was expected to have type\n    'string'    \nbut here has type\n    'int'    \ninput.fsx (2,15)-(2,16) typecheck error This expression was expected to have type\n    'string'    \nbut here has type\n    'int'    ",
-     "output_type": "error",
-     "traceback": [
-      "input.fsx (2,13)-(2,14) typecheck error This expression was expected to have type\n",
-      "    'string'    \n",
-      "but here has type\n",
-      "    'int'    \n",
-      "input.fsx (2,15)-(2,16) typecheck error This expression was expected to have type\n",
-      "    'string'    \n",
-      "but here has type\n",
-      "    'int'    "
-     ]
-    }
-   ],
-   "source": [
-    "let d = foo \"John \" \"Doe\"\n",
-    "let d = foo 2 3 "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "fsharp"
-    },
-    "vscode": {
-     "languageId": "dotnet-interactive.fsharp"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "let foo (a:int) b =\n",
-    "    a + b"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "fsharp"
-    },
-    "vscode": {
-     "languageId": "dotnet-interactive.fsharp"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "let d = foo 2 3 "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "fsharp"
-    },
-    "vscode": {
-     "languageId": "dotnet-interactive.fsharp"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "let next x = \n",
-    "    x + 1 "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "fsharp"
-    },
-    "vscode": {
-     "languageId": "dotnet-interactive.fsharp"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "let demo () = \n",
-    "    let x = 7  \n",
-    "    let x = x + 3\n",
-    "    printfn \"The x is %d\" x"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "fsharp"
-    },
-    "vscode": {
-     "languageId": "dotnet-interactive.fsharp"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The x is 10\n"
-     ]
-    }
-   ],
-   "source": [
-    "demo()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "fsharp"
-    },
-    "vscode": {
-     "languageId": "dotnet-interactive.fsharp"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "12345678910"
-     ]
-    }
-   ],
-   "source": [
-    "let x4 = for i in [1..10]\n",
-    "          do printf \"%i\" i"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "fsharp"
-    },
-    "vscode": {
-     "languageId": "dotnet-interactive.fsharp"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "I a example for if me nobody of sentence sort the understand will words"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "let c = \"nobody will understand me I a example for if of sentence sort the words\"\n",
-    "let q = c.Split(' ')\n",
-    "Array.sort q \n",
-    "|> String.concat \" \""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "fsharp"
-    },
-    "vscode": {
-     "languageId": "dotnet-interactive.fsharp"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "let p = 5"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "fsharp"
-    },
-    "vscode": {
-     "languageId": "dotnet-interactive.fsharp"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "5\n"
-     ]
-    }
-   ],
-   "source": [
-    "printfn \"%A\" p "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "fsharp"
-    },
-    "vscode": {
-     "languageId": "dotnet-interactive.fsharp"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "6\n"
-     ]
-    }
-   ],
-   "source": [
-    "let p = 6\n",
-    "printfn \"%A\" p "
    ]
   }
  ],
