--- a/en/Types.ipynb
+++ b/en/Types.ipynb
@@ -8,7 +8,7 @@
      "language": "csharp"
     },
     "vscode": {
-     "languageId": "dotnet-interactive.csharp"
+     "languageId": "csharp"
     }
    },
    "outputs": [],
